--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,18 @@
 version: '3'
 services:
-  matrix_apache:
-    image: guilledevel/blog
+  blog:
+    image: guillermomaschwitz/blog:1
     container_name: blog
     volumes:
-      - ./server:/home/node/server
-      - ./blog:/home/node/blog
-      - ./logs/server:/root/.npm/_logs
-    working_dir: /home/node/server/src
-    command: "npm start"
+      - ./src:/home/node/blog
+      - ./logs/node:/root/.npm/_logs
+    working_dir: /home/node/blog
     environment: 
       - NODE_ENV=development
-    expose:
-      - "8081"
     networks:
       blog_net: {}
     ports:
-      - 8081:8081
+      - ${WEB_PORT}:8000
 
 networks:
   blog_net:
