development environment - removed redundant project prefix from virtual network name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
       - ./blog:/home/node/blog
       - ./logs/node:/root/.npm/_logs
     networks:
-      blog_net: {}
+      net: {}
     expose: ["${WEB_PORT}"]
     ports:
       - "${WEB_PORT}:8000"
 
 networks:
-  blog_net:
+  net:
     driver: bridge
     ipam:
       driver: default
