--- a/blog/package.json
+++ b/blog/package.json
@@ -12,7 +12,7 @@
     "teams"
   ],
   "author": "Guillermo Maschwitz <guilledevel@gmail.com>",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "private": true,
   "dependencies": {
     "@mdx-js/mdx": "^1.5.1",
@@ -26,8 +26,6 @@
     "gatsby-plugin-react-helmet": "^3.1.14",
     "gatsby-plugin-sharp": "^2.2.37",
     "gatsby-source-filesystem": "^2.1.36",
-    "gatsby-theme-blog": "^1.2.2",
-    "gatsby-theme-waves": "^0.1.5",
     "gatsby-transformer-sharp": "^2.3.3",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
