--- a/blog/package.json
+++ b/blog/package.json
@@ -24,16 +24,19 @@
     "gatsby-plugin-mdx": "^1.0.57",
     "gatsby-plugin-offline": "^3.0.19",
     "gatsby-plugin-react-helmet": "^3.1.14",
+    "gatsby-plugin-sass": "^2.1.24",
     "gatsby-plugin-sharp": "^2.2.37",
     "gatsby-source-filesystem": "^2.1.36",
     "gatsby-transformer-sharp": "^2.3.3",
+    "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "resolve-url-loader": "^3.1.1"
   },
   "scripts": {
     "build": "gatsby build",
