--- a/blog/package.json
+++ b/blog/package.json
@@ -15,6 +15,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@awolf81/gatsby-theme-mdx": "0.0.2-4",
     "@emotion/core": "^10.0.22",
     "@mdx-js/mdx": "^1.5.2",
     "@mdx-js/react": "^1.5.2",
@@ -28,10 +29,8 @@
     "gatsby-plugin-sass": "^2.1.24",
     "gatsby-plugin-sharp": "^2.2.37",
     "gatsby-plugin-theme-ui": "^0.2.43",
-    "gatsby-remark-embed-gist": "^1.1.9",
     "gatsby-remark-prismjs": "^3.3.27",
     "gatsby-source-filesystem": "^2.1.40",
-    "gatsby-theme-blog": "^1.2.19",
     "gatsby-theme-waves": "^0.1.5",
     "gatsby-transformer-sharp": "^2.3.3",
     "node-sass": "^4.13.0",
