theme - fixed build issues, replaced mdx theme vendor with own page component

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     expose: ["${WEB_PORT}"]
     ports:
       - "${WEB_PORT}:8000"
+    environment:
+      DEBUG: "gatsby:query-watcher"
 
 networks:
   net:
