--- a/blog/package.json
+++ b/blog/package.json
@@ -38,11 +38,11 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
-    "theme-ui": "^0.2.52"
+    "theme-ui": "^0.2.52",
+    "resolve-url-loader": "^3.1.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1",
-    "resolve-url-loader": "^3.1.1"
+    "prettier": "^1.19.1"
   },
   "peerDependencies": {
     "@types/react": ">=16.8.0"
