--- a/.dockerignore
+++ b/.dockerignore
@@ -5,10 +5,13 @@ blog/npm-debug.log*
 
 # Dependency directories
 blog/node_modules/*
+blog/jspm_packages/*
+
 # gatsby files
 blog/.cache/*
 blog/public/*
 
+# git
 .gitignore
 .git/*
 
@@ -21,14 +24,15 @@ blog/.lock-wscript
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 blog/build/Release/*
 
-# Dependency directories
-blog/node_modules/*
-blog/jspm_packages/*
-
 # Typescript v1 declaration files
 blog/typings/*
 
 # Optional npm cache directory
 blog/.npm/*
 
-aws/*
+# terraform 
+aws-gatsby/*
+aws.tf
+.terraform/*
+
+dist/*
