tutorial - working example with xdebug setup and Makefile

--- a/code-samples/php-docker-development-environment/Dockerfile
+++ b/code-samples/php-docker-development-environment/Dockerfile
@@ -1,3 +1,7 @@
-FROM php:7.4.2-apache AS my-project-development
-RUN pecl install xdebug-2.8.1 \
+# My PHP Development environment
+FROM php:7.4.2-apache AS dev-image
+RUN pecl install xdebug-2.9.2 \
     && docker-php-ext-enable xdebug
+COPY ./config/development.ini /usr/local/etc/php/conf.d/
+COPY --chown=www-data:www-data ./public /var/www/html
+
