--- a/code-samples/php-docker-development-environment/config/development.ini
+++ b/code-samples/php-docker-development-environment/config/development.ini
@@ -1,15 +1,51 @@
+###############################
+# General
+#############
 error_reporting = E_ALL
 display_startup_errors = On
 display_errors = On
+xdebug.var_display_max_depth=9
+
+###############################
+# Debugger
+# Disabled by default
+# Triggered by an HTTP request
+# containing the parameter 
+# XDEBUG_SESSION_START
+#############
 xdebug.remote_enable=1
 # Starting the remote debugger makes the server reponses slower
 # Instead, we will set an idekey to trigger an attempt to connect
 # to the dbgp client
 xdebug.remote_autostart=0
-# Start a debugging session by sending an HTTP parameter XDEBUG_SESSION_START with value "docker"
-xdebug.idekey=docker
 xdebug.remote_host="host.docker.internal"
-xdebug.remote_handler=dbgp
+# xdebug.remote_handler=dbgp # only needed if you are using xdebug < 2.9
 xdebug.remote_mode=req
 # The port your IDE will use to wait for a connection from xdebug
 xdebug.remote_port=9001
+
+###############################
+# Profiler
+# Disabled by default
+# Triggered by an HTTP request
+# containing the parameter 
+# XDEBUG_PROFILE
+#############
+xdebug.cli_color=1
+xdebug.profiler_enable=0
+xdebug.profiler_enable_trigger=1
+xdebug.profiler_output_dir="/tmp/mydata"
+xdebug.profiler_output_name="cachegrind.out.%H.%t.%p"
+
+###############################
+# Tracer
+# Disabled by default
+# Triggered by an HTTP request
+# containing the parameter 
+# XDEBUG_TRACE
+#############
+xdebug.trace_enable_trigger=1
+xdebug.show_mem_delta=1
+xdebug.trace_output_dir="/tmp/mydata"
+xdebug.trace_output_name="trace.%H.%t.%p"
+xdebug.collect_params=3
