tutorial - code sample fully working

--- a/code-samples/php-docker-development-environment/.env
+++ b/code-samples/php-docker-development-environment/.env
@@ -1,3 +1,6 @@
 HTTP_PORT=8080
 HTTPS_PORT=8081
-HELLO_NAME="Alice"
+APP_ROOT_DIR=/usr/local/app
+APP_PUBLIC_DIR=/usr/local/app/public
+IMAGE_VERSION_TAG=1.0
+PROJECT_NAME=sample-php-app
