--- a/code-samples/php-docker-development-environment/config/php-dev.ini
+++ b/code-samples/php-docker-development-environment/config/php-dev.ini
@@ -48,3 +48,15 @@ xdebug.show_mem_delta=1
 xdebug.trace_output_dir="/tmp/mydata"
 xdebug.trace_output_name="trace.%H.%t.%p"
 xdebug.collect_params=3
+
+###############################
+# OPcache
+#############
+opcache.enable=1
+opcache.revalidate_freq=0
+opcache.validate_timestamps=1
+opcache.max_accelerated_files=10000
+opcache.memory_consumption=192
+opcache.max_wasted_percentage=10
+opcache.interned_strings_buffer=16
+opcache.fast_shutdown=1
