--- a/code-samples/php-docker-development-environment/Makefile
+++ b/code-samples/php-docker-development-environment/Makefile
@@ -2,31 +2,34 @@ include .env
 
 # Bake an image of your development environment
 build:
-	docker build -t my-project:1.0-development \
+	docker build -t ${PROJECT_NAME}:${IMAGE_VERSION_TAG}-development \
 		--build-arg HTTP_PORT=${HTTP_PORT} \
 		--build-arg HTTPS_PORT=${HTTPS_PORT} \
 		--target dev-image .
 
 start:
 	docker run --rm \
+		--user root \
 		-p ${HTTP_PORT}:${HTTP_PORT}/tcp \
 		-p ${HTTPS_PORT}:${HTTPS_PORT}/tcp \
-		-v ${PWD}/src:/usr/local/project \
-		-v ${PWD}/data:/tmp/mydata \
+		-v ${PWD}/src:${APP_ROOT_DIR} \
+		-v ${PWD}/data:/tmp/${PROJECT_NAME} \
 		-e HTTPS_PORT=${HTTPS_PORT} \
 		-e HTTP_PORT=${HTTP_PORT} \
-		-e HELLO_NAME=${HELLO_NAME} \
-		--name my-project-container \
-		my-project:1.0-development
+		-e APP_ROOT_DIR=${APP_ROOT_DIR} \
+		-e APP_PUBLIC_DIR=${APP_PUBLIC_DIR} \
+		-e IMAGE_VERSION_TAG=${IMAGE_VERSION_TAG} \
+		--name ${PROJECT_NAME}-container \
+		${PROJECT_NAME}:${IMAGE_VERSION_TAG}-development
 
 exec:
 	@read -p "Write a command to execute inside your running container: " command; \
-	docker exec my-project-container sh -c "$$command"
+	docker exec ${PROJECT_NAME}-container sh -c "$$command"
 
 stop: 
-	-docker container stop my-project-container
+	-docker container stop ${PROJECT_NAME}-container
 
 clean: stop	
-	-docker container rm my-project-container
-	docker image rm my-project:1.0-development
+	-docker container rm ${PROJECT_NAME}-container
+	docker image rm ${PROJECT_NAME}:${IMAGE_VERSION_TAG}-development
 
