--- a/code-samples/php-docker-development-environment/config/apache-vhost.conf
+++ b/code-samples/php-docker-development-environment/config/apache-vhost.conf
@@ -1,31 +1,36 @@
-<VirtualHost *:${HTTP_PORT}>
-	# The ServerName directive sets the request scheme, hostname and port that
-	# the server uses to identify itself. This is used when creating
-	# redirection URLs. In the context of virtual hosts, the ServerName
-	# specifies what hostname must appear in the request's Host: header to
-	# match this virtual host. For the default virtual host (this file) this
-	# value is not decisive as it is used as a last resort host regardless.
-	# However, you must set it for any further virtual host explicitly.
-	#ServerName www.example.com
+# Authorize access to project's root folder
+<Directory ${APP_ROOT_DIR}>
+    Options Indexes MultiViews
+    AllowOverride None
+    Require all granted
+</Directory>
 
+# HTTP configuration
+<VirtualHost _default_:${HTTP_PORT}>
 	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/html
-
-	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
-	# error, crit, alert, emerg.
-	# It is also possible to configure the loglevel for particular
-	# modules, e.g.
-	#LogLevel info ssl:warn
-
+	DocumentRoot ${APP_PUBLIC_DIR}
+	<Directory ${APP_ROOT_DIR}>
+		Options Indexes MultiViews
+		AllowOverride None
+		Require all granted
+	</Directory>
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
-
-	# For most configuration files from conf-available/, which are
-	# enabled or disabled at a global level, it is possible to
-	# include a line for only one particular virtual host. For example the
-	# following line enables the CGI configuration for this host only
-	# after it has been globally disabled with "a2disconf".
-	#Include conf-available/serve-cgi-bin.conf
 </VirtualHost>
 
-# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
+# SSL with self signed certificate
+<VirtualHost _default_:${HTTPS_PORT}>
+	ServerAdmin webmaster@localhost    
+	DocumentRoot ${APP_PUBLIC_DIR}
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
+	SSLEngine on
+	SSLCertificateFile	/etc/ssl/certs/ssl-cert-snakeoil.pem
+	SSLCertificateKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
+	<FilesMatch "\.(cgi|shtml|phtml|php)$">
+		SSLOptions +StdEnvVars
+	</FilesMatch>		
+    <Directory /usr/lib/cgi-bin>
+		SSLOptions +StdEnvVars
+	</Directory>
+</VirtualHost>
