code-sample - added support for composer, implemented 'make sudo' command

--- a/code-samples/php-docker-development-environment/Makefile
+++ b/code-samples/php-docker-development-environment/Makefile
@@ -5,11 +5,12 @@ build:
 	docker build -t ${PROJECT_NAME}:${IMAGE_VERSION_TAG}-development \
 		--build-arg HTTP_PORT=${HTTP_PORT} \
 		--build-arg HTTPS_PORT=${HTTPS_PORT} \
+		--build-arg PROJECT_NAME=${PROJECT_NAME} \
+		--build-arg APP_ROOT_DIR=${APP_ROOT_DIR} \
 		--target dev-image .
 
 start:
 	docker run --rm \
-		--user root \
 		-p ${HTTP_PORT}:${HTTP_PORT}/tcp \
 		-p ${HTTPS_PORT}:${HTTPS_PORT}/tcp \
 		-v ${PWD}/src:${APP_ROOT_DIR} \
@@ -25,6 +26,10 @@ start:
 exec:
 	@read -p "Write a command to execute inside your running container: " command; \
 	docker exec ${PROJECT_NAME}-container sh -c "$$command"
+
+sudo:
+	@read -p "Write a command to execute inside your running container (AS ROOT): " command; \
+	docker exec --user root ${PROJECT_NAME}-container sh -c "$$command"
 
 stop: 
 	-docker container stop ${PROJECT_NAME}-container
