--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     networks:
       net: {}
     ports:
-      - "8000:8000"
+      - ${PORT}:${PORT}
     environment:
       DEBUG: "gatsby:query-watcher"
 
