--- a/blog/package.json
+++ b/blog/package.json
@@ -19,7 +19,7 @@
     "@mdx-js/mdx": "^1.5.2",
     "@mdx-js/react": "^1.5.2",
     "deepmerge": "^4.2.2",
-    "gatsby": "^2.17.11",
+    "gatsby": "^2.23.22",
     "gatsby-image": "^2.2.31",
     "gatsby-plugin-manifest": "^2.2.27",
     "gatsby-plugin-mdx": "^1.0.63",
@@ -31,15 +31,15 @@
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-theme-waves": "^0.1.5",
     "gatsby-transformer-sharp": "^2.3.3",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.14.1",
     "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
-    "theme-ui": "^0.2.52",
-    "resolve-url-loader": "^3.1.1"
+    "resolve-url-loader": "^3.1.1",
+    "theme-ui": "^0.2.52"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
