--- a/blog/package.json
+++ b/blog/package.json
@@ -42,6 +42,7 @@
     "theme-ui": "^0.2.52"
   },
   "devDependencies": {
+    "gatsby-plugin-remove-trailing-slashes": "^2.3.11",
     "prettier": "^1.19.1"
   },
   "peerDependencies": {
