hard coding last stable docker image when starting development environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   blog:
-    image: guillermomaschwitz/blog:${PROJECT_VERSION}-development
+    image: guillermomaschwitz/blog:3-development
     container_name: blog
     volumes:
       - ./blog:/home/node/blog
